--- a/assets/scripts/fe/angular.json
+++ b/assets/scripts/fe/angular.json
@@ -47,7 +47,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap-reboot.min.css"
             ],
             "scripts": []
           },
